# dataflow_transfer

./: .gitignore  LICENCE  README.md  dataflow_transfer.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: check-pr-label.yml  check-version.yml  lint-code.yml  python-app.yml  test-code.yml
dataflow_transfer/: cli.py  dataflow_transfer.py
dataflow_transfer/log/: __init__.py
dataflow_transfer/run_classes/: __init__.py  element_runs.py  generic_runs.py  illumina_runs.py  ont_runs.py  registry.py
dataflow_transfer/tests/: test_filesystem.py  test_illumina_runs.py  test_run_classes.py
dataflow_transfer/utils/: filesystem.py  statusdb.py  transfer.py
