[tool.ruff.lint]
select = [
    #         Ruff default rules
    # ------------------------------
    "E4", # pycodestyle Imports
    "E7", # pycodestyle Statements
    "E9", # pycodestyle Runtime
    "F",  # Pyflakes

    #         Additional    Comment
    # ------------------------------------------------------
    "I",  # isort         Best-practice sorting of imports
    "UP", # pyupgrade     Make sure syntax is up-to-date
]
ignore = [
    "E402", # Module level import not at top of file
    "E722", # Do not use bare 'except'
    "E741", # Ambiguous variable name
]

[tool.mypy]
ignore_missing_imports = true
follow_imports = 'skip'
exclude = "build"

[project]
name = "dataflow_transfer"
version = "1.0.3"
description = "Script for transferring sequencing data from sequencers to storage"
authors = [
    { name = "Sara Sjunnebo", email = "sara.sjunnebo@scilifelab.se" },
]
readme = "README.md"

requires-python = ">=3.11"
dependencies = [
    "click",
    "PyYAML",
    "xmltodict",
    "ibmcloudant",
]

[project.optional-dependencies]

dev = [
    "ruff>=0.11.8",
    "pytest",
]

[project.scripts]
dataflow_transfer = "dataflow_transfer.cli:cli"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]